Fix overflow

--- a/style.css
+++ b/style.css
@@ -123,8 +123,10 @@ body {
   justify-self: flex-end;
   margin-top: auto;
   background-color: gainsboro;
-  width: 100%;
-  padding: 15px;
+  width: 100vw;
+  padding: 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
